fixed the sidebar stretch

--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -113,6 +113,6 @@ nav li a {
 
 @media(max-width: 400px) {
     .sidebar {
-        width: 100%;
+        width: 50%;
     }
 }
